test/fail/basic_syntax/invalid_parameter.type.lly
#[
SyntaxError: Class 'asdf' does not exist.
Where: File "invalid_parameter.type.lly" at line 6
]#

define f(g: asdf) {
}
